Slider: Fix multiple scrollbars, adaptive, experimental textarea

--- a/source/style/common/_header-form.sass
+++ b/source/style/common/_header-form.sass
@@ -92,6 +92,8 @@
 
 	.change-photo__text
 		text-align: center
+		color: $white
+		transition: color $transition-time
 		.fa
 			margin-top: 20px
 			position: relative
@@ -99,15 +101,11 @@
 			font-size: 38px
 			padding-bottom: 5px
 			color: inherit
-			transition: color .3s
 		.link
 			position: relative
 			color: inherit
-			transition: color .3s
-			color: $white
-			transition: color .3s
-			&:hover
-				color: rgba($white, 0.8)
+		&:hover
+			color: darken($white, 20%)
 		.form__input_file
 			display: none
 
