--- a/source/style/common/_init.sass
+++ b/source/style/common/_init.sass
@@ -29,6 +29,7 @@ body
 html
 	overflow-x: hidden
 	overflow-y: scroll
+	transition: none
 
 #sprites-container
 	display: none
