--- a/source/style/common/_slider.sass
+++ b/source/style/common/_slider.sass
@@ -3,13 +3,14 @@
 	background-color: rgba($black, 0.9)
 	width: 100%
 	height: 100%
+	min-width: 320px
 	left: 0
 	top: 0
 	z-index: 10
+	overflow-x: hidden
 	overflow-y: scroll
 	padding-top: 10%
 	padding-bottom: 10%
-	
 	visibility: hidden
 	opacity: 0
 
@@ -20,36 +21,25 @@
 			animation: none
 			visibility: visible
 			opacity: 1
-		.hm-modal__content
-			animation: slider-content-show $transition-time_medium
-			animation-fill-mode: forwards
-			+media(xs)
-				animation: none
-				visibility: visible
 	&.hide
 		animation: slider-hide $transition-time_medium
+		overflow: hidden
 		+media(xs)
 			animation: none
 			visibility: hidden
 			opacity: 0
-		.hm-modal__content
-			animation: slider-content-hide $transition-time_medium
-			animation-fill-mode: forwards
-			+media(xs)
-				animation: none
 
 .slider__overlay
-	width: 80%
-	margin: 0 auto
-	max-width: 680px
+	width: 100%
+	// margin: 0 auto
+	// max-width: 680px
 	position: relative
 
 // buttons
 .slider__btn
 	position: absolute
-	
 	.fa
-		transition: color 0.3s
+		transition: color $transition-time
 		color: $white
 		font-size: rem(30)
 		cursor: pointer
@@ -58,22 +48,26 @@
 			color: rgba($white, 0.8)
 
 .slider__btn_close
-	top: -28px
-	right: -68px
+	top: rem(-31)
+	right: -10%
 
 .slider__btn_left
 	top: 220px
-	left: -60px
+	left: -10%
 
 .slider__btn_right
 	top: 220px
-	right: -60px
+	right: -10%
 
 // holder
 .slider__holder
+	margin: 0 auto
 	background-color: $white
+	width: 600px
+	max-width: 80%
 	border-radius: 3px
-	overflow: hidden
+	// overflow: hidden
+	position: relative
 
 .slider__photo
 	position: relative
@@ -185,12 +179,17 @@
 	line-height: 1.5
 
 .comments__textarea
+	font-family: 'Proximanova_light'
 	width: 100%
 	max-width: 100%
-	height: 38px
+	min-height: 100px
+	resize: none
 	min-height: 38px
 	max-height: 64px
 	margin-bottom: 10px
+	background-color: $white
+	&[contenteditable=true]:empty:not(:focus)::before
+		content: attr(data-placeholder)
 
 .comments__btn
 
